# torch_gpu_ext

./: .gitignore  CMakeLists.txt  README.md  build_rocm.sh  cmake.py  format.sh  setup.py
include/: add_kernel_impl.h  device_common.h
src/: register.cpp
src/common/: device_common.h  gpu_loops_kernel_impl.h  rope_rms_impl.h
src/device/: add_kernel.cu
src/ops/: add_kernel.cpp  add_kernel.h  mul_kernel.cpp  mul_kernel.h  myobj.cpp  myobj.h
test/: test_mrope_rms.cpp  test_rope_rms.cpp  unit_test.py
torch_gpu_ext/: __init__.py
