cmake_minimum_required(VERSION 3.12)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 17)
set(ROOTDIR ${PROJECT_SOURCE_DIR})

include_directories(${ROOTDIR}/src/common)
include_directories(${ROOTDIR}/src/ops)

find_package(CUDA)
if(CUDA_FOUND)
    enable_language(CUDA)
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --std=c++17 -O3")
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-relaxed-constexpr")
    file(GLOB KERNEL_SRCS "${ROOTDIR}/src/ops/*.cpp")
    set_source_files_properties(${KERNEL_SRCS} PROPERTIES LANGUAGE CUDA)
    add_library(${PROJECT_NAME}_device SHARED ${KERNEL_SRCS})
endif(CUDA_FOUND)

find_package(HIP)
if(HIP_FOUND)
    enable_language(HIP)
    set(CMAKE_HIP_FLAGS "${CMAKE_HIP_FLAGS} --std=c++17 -O3 -Wno-unused-result")
    file(GLOB KERNEL_SRCS "${ROOTDIR}/src/ops/*.cpp")
    set_source_files_properties(${KERNEL_SRCS} PROPERTIES LANGUAGE HIP)
    add_library(${PROJECT_NAME}_device SHARED ${KERNEL_SRCS})
endif(HIP_FOUND)

message(${Torch_DIR})
find_package(Torch REQUIRED)

add_library(${PROJECT_NAME} MODULE ${ROOTDIR}/src/register.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE ${TORCH_LIBRARIES} ${PROJECT_NAME}_device)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)

target_include_directories(${PROJECT_NAME}_device PRIVATE ${TORCH_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME}_device PRIVATE ${PYTHON_INCLUDE_DIR})
target_include_directories(${PROJECT_NAME} PRIVATE ${PYTHON_INCLUDE_DIR})
